# blitz

./: .gitignore  CMakeLists.txt  README.md  application.cpp  application.h  main.cpp
models/helmet/: helmet.gltf
models/skull-tropy/: scene.gltf
shaders/: CMakeLists.txt  compile.sh  deferred.frag  deferred.vert  shader.frag  shader.vert
src/: CMakeLists.txt  application.cpp  application.h  buffer.cpp  buffer.h  camera.h  gltfloader.cpp  gltfloader.h  image.cpp  image.h  light.h  main.cpp  renderer.cpp  renderer.h  scene.cpp  scene.h  shaderloader.h  swapchain.cpp  swapchain.h  texture.cpp  texture.h  ui.cpp  ui.h  vertex.h
src/imgui/: CMakeLists.txt
